15. 3Sum small optimization